<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtNombre" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="-35dp"
        android:ems="10"
        android:hint="Escriba su Nombre"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtApellidos" />

    <EditText
        android:id="@+id/editApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="-35dp"
        android:ems="10"
        android:hint="Escriba sus Apellidos"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtEdad" />

    <EditText
        android:id="@+id/editEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="-35dp"
        android:ems="10"
        android:hint="Escriba su Edad"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtGenero" />

    <RadioGroup
        android:id="@+id/grupoGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/buttonHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:text="Hombre" />

        <RadioButton
            android:id="@+id/buttonMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="-30dp"
            android:text="Mujer" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtEstadoCivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtEstadoCivil" />

    <Spinner
        android:id="@+id/spinnerEstadoCivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>